WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95110
[Chromium] Fixing infinite recursion in Canvas2DLayerManager
https://bugs.webkit.org/show_bug.cgi?id=95110
Summary
[Chromium] Fixing infinite recursion in Canvas2DLayerManager
Justin Novosad
Reported
2012-08-27 11:58:30 PDT
[Chromium] Fixing infinite recursion in Canvas2DLayerManager
Attachments
Patch
(4.13 KB, patch)
2012-08-27 12:05 PDT
,
Justin Novosad
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Justin Novosad
Comment 1
2012-08-27 12:05:12 PDT
Created
attachment 160767
[details]
Patch
Stephen White
Comment 2
2012-08-27 12:08:05 PDT
Comment on
attachment 160767
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=160767&action=review
r=me
> Source/WebCore/platform/graphics/chromium/Canvas2DLayerBridge.cpp:128 > m_bytesAllocated -= bytesFreed;
Micronit: this could be in the if-clause too.
> Source/WebKit/chromium/tests/Canvas2DLayerManagerTest.cpp:62 > m_bytesAllocated -= bytesFreed;
As above.
WebKit Review Bot
Comment 3
2012-08-27 13:20:30 PDT
Comment on
attachment 160767
[details]
Patch Clearing flags on attachment: 160767 Committed
r126787
: <
http://trac.webkit.org/changeset/126787
>
WebKit Review Bot
Comment 4
2012-08-27 13:20:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug