[Chromium] Fixing infinite recursion in Canvas2DLayerManager https://bugs.webkit.org/show_bug.cgi?id=95110

Patch by Justin Novosad <junov@chromium.org> on 2012-08-27
Reviewed by Stephen White.

Source/WebCore:

Fixed infinite recursion by not reporting a change in memory allocation
when Canvas2DLayerBridge::freeMemoryIfPossible fails to free memory.
Also modified Canvas2DLayerManager::layerAllocatedStorageChanged to
only initiate a memory eviction pass if memory consumption has
increased.

Test: webkit_unit_tests Canvas2DLayerManagerTest*

* platform/graphics/chromium/Canvas2DLayerBridge.cpp:
(WebCore::Canvas2DLayerBridge::freeMemoryIfPossible):
* platform/graphics/chromium/Canvas2DLayerManager.cpp:
(WebCore::Canvas2DLayerManager::layerAllocatedStorageChanged):

Source/WebKit/chromium:

Breaking recursion cycle by not reporting a change in memory allocation
when no memory is freed in FakeCanvas2DLayer::freeMemoryIfPossible.

* tests/Canvas2DLayerManagerTest.cpp:

Canonical link: https://commits.webkit.org/112967@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126787 268f45cc-cd09-0410-ab3c-d52691b4dbfc